# corrupt-mnist

./: Dockerfile  README.md  artifact_download.py  cloudbuild.yaml  config.yaml  model.pth  pyproject.toml  requirements.txt  requirements_dev.txt  tasks.py  train.dockerfile  vertex_ai_train.yaml
.dvc/: config
.github/: dependabot.yaml
.github/workflows/: codecheck.yaml  python-app.yml  tests.yaml
exercises/m22/: ML_main.py  database.csv  main.py  reqex.py  requirements.txt
exercises/m22/app/: main.py
exercises/m23/cloud functions/: main.py  model.pkl  requirements.txt
exercises/m23/cloud run/: simple_fastapi_app.dockerfile
models/: docker_model.pth  evaluate.dockerfile  model.pth
src/package/: __init__.py  evaluate.py  model.py  train.py  visualize.py
tests/: __init__.py  test_data.py  test_fun.py  test_model.py
tests/integrationtests/: __init__.py  test_apis.py
wandb/run-20260108_122511-dug848ho/: run-dug848ho.wandb
wandb/run-20260108_122511-dug848ho/files/: config.yaml  wandb-metadata.json  wandb-summary.json
wandb/run-20260108_123230-07lqgup9/: run-07lqgup9.wandb
wandb/run-20260108_123230-07lqgup9/files/: config.yaml  wandb-metadata.json  wandb-summary.json
wandb/run-20260108_123612-ymsffuwm/: run-ymsffuwm.wandb
wandb/run-20260108_123612-ymsffuwm/files/: config.yaml  requirements.txt  wandb-metadata.json  wandb-summary.json
wandb/run-20260108_125623-pcdey33k/: run-pcdey33k.wandb
wandb/run-20260108_125623-pcdey33k/files/: config.yaml  wandb-metadata.json  wandb-summary.json
